--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -78,7 +78,7 @@ serde      = { version = "1.0.195", features = ["derive"] }
 [features]
 esp32   = ["dep:esp32",   "xtensa", "procmacros/esp32",   "xtensa-lx/esp32",   "xtensa-lx-rt?/esp32"]
 esp32c2 = ["dep:esp32c2", "riscv",  "procmacros/esp32c2", "portable-atomic/unsafe-assume-single-core"]
-esp32c3 = ["dep:esp32c3", "riscv",  "procmacros/esp32c3", "portable-atomic/unsafe-assume-single-core"]
+esp32c3 = ["dep:esp32c3", "riscv",  "procmacros/esp32c3"]
 esp32c6 = ["dep:esp32c6", "riscv",  "procmacros/esp32c6"]
 esp32h2 = ["dep:esp32h2", "riscv",  "procmacros/esp32h2"]
 esp32p4 = ["dep:esp32p4", "riscv",  "procmacros/esp32p4"]
